css changes to fix spacing issues

--- a/ui.frontend/src/main/webpack/etisalat/grid/index.scss
+++ b/ui.frontend/src/main/webpack/etisalat/grid/index.scss
@@ -15,6 +15,3 @@ $grid-spacing: 12px;
   padding-left: 0;
   padding-right: 0;
 }
-.aem-GridColumn--default--12{
-  padding: 0;
-}
