--- a/ui.frontend/src/main/webpack/etisalat/styles/teaser.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/teaser.scss
@@ -40,10 +40,7 @@
       transform: rotate(180deg);
     }
   }
-  * {
-    color: $white;
-  }
-
+  
   &--default-bg {
     background: get-background-gredient(default-bg);
     *,
